benchmarks/verus/bignum/vericoder_glm_15-09_18h46/debug/bignum_ModExp_ModExpPow2_Mul_iter5_error.log
=== Verification Error - Iteration 5 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExp_ModExpPow2_Mul.rs
Time: 2025-09-15 20:47:41

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_ModExpPow2_Mul_impl.rs:31:17
   |
31 |     let mut i = a.len() as int - 1;
   |                 ^^^^^^^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_ModExpPow2_Mul_impl.rs:32:17
   |
32 |     let mut j = b.len() as int - 1;
   |                 ^^^^^^^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_ModExpPow2_Mul_impl.rs:36:19
   |
36 |         let sum = (bit_a == '1') as int + (bit_b == '1') as int + carry as int;
   |                   ^^^^^^^^^^^^^^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_ModExpPow2_Mul_impl.rs:36:43
   |
36 |         let sum = (bit_a == '1') as int + (bit_b == '1') as int + carry as int;
   |                                           ^^^^^^^^^^^^^^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_ModExpPow2_Mul_impl.rs:36:67
   |
36 |         let sum = (bit_a == '1') as int + (bit_b == '1') as int + carry as int;
   |                                                                   ^^^^^^^^^^^^

error[E0425]: cannot find function `seq_repeat` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_ModExpPow2_Mul_impl.rs:77:54
   |
77 |              exists |k: nat| modulus@ == seq!['1'] + seq_repeat('0', k)
   |                                                      ^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `seq_repeat` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_ModExpPow2_Mul_impl.rs:93:54
   |
93 |              exists |k: nat| modulus@ == seq!['1'] + seq_repeat('0', k)
   |                                                      ^^^^^^^^^^ not found in this scope

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0425`.

--------------------------------------------------------------------------------

Additional Output:
error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_ModExpPow2_Mul_impl.rs:31:17
   |
31 |     let mut i = a.len() as int - 1;
   |                 ^^^^^^^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_ModExpPow2_Mul_impl.rs:32:17
   |
32 |     let mut j = b.len() as int - 1;
   |                 ^^^^^^^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_ModExpPow2_Mul_impl.rs:36:19
   |
36 |         let sum = (bit_a == '1') as int + (bit_b == '1') as int + carry as int;
   |                   ^^^^^^^^^^^^^^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_ModExpPow2_Mul_impl.rs:36:43
   |
36 |         let sum = (bit_a == '1') as int + (bit_b == '1') as int + carry as int;
   |                                           ^^^^^^^^^^^^^^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_ModExpPow2_Mul_impl.rs:36:67
   |
36 |         let sum = (bit_a == '1') as int + (bit_b == '1') as int + carry as int;
   |                                                                   ^^^^^^^^^^^^

error[E0425]: cannot find function `seq_repeat` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_ModExpPow2_Mul_impl.rs:77:54
   |
77 |              exists |k: nat| modulus@ == seq!['1'] + seq_repeat('0', k)
   |                                                      ^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `seq_repeat` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_ModExpPow2_Mul_impl.rs:93:54
   |
93 |              exists |k: nat| modulus@ == seq!['1'] + seq_repeat('0', k)
   |                                                      ^^^^^^^^^^ not found in this scope

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0425`.
